force-app/main/default/objects/Investment_Instrument__c/Investment_Instrument__c.object-meta.xml
<CustomObject>
    <label>Investment Instrument</label>
    <nameField>
        <displayFormat>INS-{000000}</displayFormat>
        <label>Instrument Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Instruments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>