force-app/main/default/objects/Investment_Instrument__c/fields/FD_Details__c.field-meta.xml
<CustomField>
    <fullName>FD_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FD Details</label>
    <referenceTo>Fixed_Deposit__c</referenceTo>
    <relationshipLabel>Investment Instruments</relationshipLabel>
    <relationshipName>Investment_Instruments</relationshipName>
    <type>Lookup</type>
</CustomField>