force-app/main/default/objects/Investment_Instrument__c/fields/Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invested_Amount__c</fullName>
    <label>Invested Amount</label>
    <summarizedField>Investment__c.Total_Invested_Amount__c</summarizedField>
    <summaryForeignKey>Investment__c.Investment_Instrument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>