force-app/main/default/objects/Investment_Instrument__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(NOT(ISBLANK(PF_Details__c)), &apos;PF-&apos; &amp; INITCAP(PF_Details__r.Name), 
 IF(NOT(ISBLANK(Fund_Details__c)), &apos;MF-&apos; &amp; INITCAP(Fund_Details__r.Name), 
  IF(NOT(ISBLANK(SIP_Details__c)), &apos;SIP-&apos; &amp; INITCAP(SIP_Details__r.Name), 
   IF(NOT(ISBLANK(Stock_Details__c)), &apos;STOCK-&apos; &amp; INITCAP(Stock_Details__r.Name), 
    IF(NOT(ISBLANK(FD_Details__c)), &apos;FD-&apos; &amp; INITCAP(FD_Details__r.Name), 
     IF(NOT(ISBLANK(ULIP_Details__c)), &apos;FD-&apos; &amp; INITCAP(ULIP_Details__r.Name),INITCAP(Name))
    )   
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>