force-app/main/default/objects/Investment_Instrument__c/fields/PF_Details__c.field-meta.xml
<CustomField>
    <fullName>PF_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PF Details</label>
    <referenceTo>PPF__c</referenceTo>
    <relationshipLabel>Investment Instruments</relationshipLabel>
    <relationshipName>Investment_Instruments</relationshipName>
    <type>Lookup</type>
</CustomField>