force-app/main/default/objects/Investment_Instrument__c/fields/SIP_Details__c.field-meta.xml
<CustomField>
    <fullName>SIP_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIP Details</label>
    <referenceTo>SIP__c</referenceTo>
    <relationshipLabel>Investment Instruments</relationshipLabel>
    <relationshipName>Investment_Instruments</relationshipName>
    <type>Lookup</type>
</CustomField>