force-app/main/default/objects/Investment_Instrument__c/fields/Stock_Details__c.field-meta.xml
<CustomField>
    <fullName>Stock_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Details</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Investment Instruments</relationshipLabel>
    <relationshipName>Investment_Instruments</relationshipName>
    <type>Lookup</type>
</CustomField>