force-app/main/default/objects/Investment_Instrument__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(NOT(ISBLANK( FD_Details__c )), &apos;FD&apos;,
 IF(NOT(ISBLANK( Stock_Details__c )), &apos;STOCK&apos;,
  IF(NOT(ISBLANK( Fund_Details__c )), &apos;MF&apos;,
   IF(NOT(ISBLANK( ULIP_Details__c )), &apos;ULIP&apos;,
    IF(NOT(ISBLANK( PF_Details__c )), &apos;PF&apos;, &apos;&apos;)
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>